# src/routes/doc.swagger.json
@@ -33,12 +33,12 @@
                   "type": "string",
                   "example": "teste123@gmail.com"
                 },
-                "senha": {
+                "password": {
                   "type": "string",
                   "example": "teste123"
                 }
               },
-              "required": ["email", "senha"]
+              "required": ["email", "password"]
             }
           }
         ],
@@ -86,7 +86,7 @@
                   "type": "string",
                   "example": "teste@gmail.com"
                 },
-                "senha": {
+                "password": {
                   "type": "string",
                   "example": "123"
                 },
@@ -95,7 +95,7 @@
                   "example": "1996-12-15"
                 }
               },
-              "required": ["nome", "cpf", "email", "senha"]
+              "required": ["nome", "cpf", "email", "password"]
             }
           }
         ],
@@ -143,7 +143,7 @@
                   "type": "string",
                   "example": "teste@gmail.com"
                 },
-                "senha": {
+                "password": {
                   "type": "string",
                   "example": "123"
                 },
@@ -152,7 +152,7 @@
                   "example": "1996-12-15"
                 }
               },
-              "required": ["nome", "cpf", "email", "senha"]
+              "required": ["nome", "cpf", "email", "password"]
             }
           }
         ],
